--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 
                <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; val<span class="signo"> = </span> digitalRead<span class="signo">(<span class="texto">LDR</span>)</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="resaltador">if <span class="signo">( <span class="texto">val <span class="signo"> == </span> <span class="resaltador">HIGH</span> </span> ){</span></span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="signo">} <span class="resaltador">else</span> {</span><br>
@@ -352,6 +353,7 @@
 
                <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; val<span class="signo"> = </span> digitalRead<span class="signo">(<span class="texto">LDR</span>)</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="resaltador">if <span class="signo">( <span class="texto">val <span class="signo"> == </span> <span class="resaltador">HIGH</span> </span> ){</span></span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
@@ -388,6 +390,7 @@
 
                <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; val<span class="signo"> = </span> digitalRead<span class="signo">(<span class="texto">LDR</span>)</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="resaltador">if <span class="signo">( <span class="texto">val <span class="signo"> == </span> <span class="resaltador">HIGH</span> </span> ){</span></span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
@@ -435,6 +438,7 @@
 
                <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; val<span class="signo"> = </span> digitalRead<span class="signo">(<span class="texto">LDR</span>)</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="resaltador">if <span class="signo">( <span class="texto">val <span class="signo"> == </span> <span class="resaltador">HIGH</span> </span> ){</span></span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
@@ -509,16 +513,82 @@
                <span class="variables">int</span> val<span class="signo">;</span> <br>
                <span class="resaltador">void</span> setup<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
-               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>OSI1, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>OSI2, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>SEM1, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>SEM2, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>SEM3, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LDR, <span class="resaltador">INPUT</span><span class="signo">);</span> <br>
                <span class="signo">{</span> <br>
 
                <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
                <span class="signo">{</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp; val<span class="signo"> = </span> digitalRead<span class="signo">(<span class="texto">LDR</span>)</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="resaltador">if <span class="signo">( <span class="texto">val <span class="signo"> == </span> <span class="resaltador">HIGH</span> </span> ){</span></span> <br>
-               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp delay<span class="signo">(<span class="number">500</span>)</span>; <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="signo">} <span class="resaltador">else</span> {</span><br>
-               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>LED, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>OSI2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM1, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM2, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>SEM3, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
                &nbsp;&nbsp;&nbsp;&nbsp; <span class="signo">}</span><br>
                <span class="signo">{</span> <br>
             </code>
