--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
          </div>
       </div>
    </main>
-   <script src="/main.js"></script>
+   <script src="main.js"></script>
 </body>
 
 </html>
