--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Codigos del taller de lectronica de Sec. Tec. 44">
+   <link rel="shortcut icon" href="/img//icono.png" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
    <title>Taller Electronica</title>
 </head>
@@ -221,7 +223,8 @@
       <div class="actividad inactivo" id="actividad6">
          <h2>Actividad 6</h2>
          <div class="contenido">
-            <p>Esta actividad se realizara un semaforo (nuevamente) pero se le quitara lineas de codigo usando un Arduino</p>
+            <p>Esta actividad se realizara un semaforo (nuevamente) pero se le quitara lineas de codigo usando un
+               Arduino</p>
             <div class="codigo">
                <code>
                   <span class="resaltador">const</span> <span class="variables">int</span> LED1 <span class="signo"> =  <span class="number">13</span>;</span> <br>
@@ -259,7 +262,7 @@
          </div>
       </div>
       <!--Actividad 6-->
-      <div class="actividad inactivo id="actividad7">
+      <div class="actividad inactivo id=" actividad7">
          <h2>Actividad 7</h2>
          <div class="contenido">
             <p>Esta actividad se realizara el encendido y apagado de un led usando un boton en Arduino</p>
@@ -291,7 +294,8 @@
       <div class="actividad inactivo" id="actividad8">
          <h2>Actividad 8</h2>
          <div class="contenido">
-            <p>Esta actividad se realizara la secuencia de encendido y apagado de dos leds usando un boton en Arduino</p>
+            <p>Esta actividad se realizara la secuencia de encendido y apagado de dos leds usando un boton en Arduino
+            </p>
             <div class="codigo">
                <code>
                   <span class="resaltador">const</span> <span class="variables">int</span> LED1 <span class="signo"> =  <span class="number">13</span>;</span> <br>
