--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
    <header>
       <h1>Taller de Electronica</h1>
+      <p>
+         En esta pagina optendras todos los codigos de todas las clases y con una breve descriptión
+      </p>
    </header>
    <main>
       <div class="actividad inactivo" id="actividad1">
@@ -262,7 +265,7 @@
          </div>
       </div>
       <!--Actividad 6-->
-      <div class="actividad inactivo id=" actividad7">
+      <div class="actividad inactivo" id="actividad7">
          <h2>Actividad 7</h2>
          <div class="contenido">
             <p>Esta actividad se realizara el encendido y apagado de un led usando un boton en Arduino</p>
@@ -625,6 +628,11 @@
          </div>
       </div>
    </main>
+   <footer>
+      <img src="/img/icono.png" alt="icono" width="50vw">
+      <p>Taller de Electronica Sistemas y Comunicaciones</p>
+      <p>Esc. Sec. Tec. 44 <br> "General Francisco Villa"</p>
+   </footer>
    <script src="main.js"></script>
 </body>
 
