--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
       </div>
    </main>
    <footer>
-      <img src="/img/icono.png" alt="icono" width="50vw">
+      <img src="https://prints.ultracoloringpages.com/422af46047e9e2c260bae815571c7fdc.png" alt="icono" width="50vw">
       <p>Taller de Electronica Sistemas y Comunicaciones</p>
       <p>Esc. Sec. Tec. 44 <br> "General Francisco Villa"</p>
    </footer>
