--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Esta actividad se realizara el encendido y apagado de un led usando un Arduino</p>
             <div class="codigo">
                <code>
-                  <span class="resaltador">const</span> <span class="variables">int</span> LED1 <span class="signo"> =  <span class="number">13</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> LED <span class="signo"> =  <span class="number">13</span>;</span> <br>
                   <span class="resaltador">void</span> setup<span class="signo">()</span> <br>
                   <span class="signo">{</span> <br>
                   &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
