--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@
                   <span class="resaltador">void</span> setup<span class="signo">()</span> <br>
                   <span class="signo">{</span> <br>
                   &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED1, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
-                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED2, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
-                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED3, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
-                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED4, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
-                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED5, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  x family español latino       &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>LED5, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
                   <span class="signo">{</span> <br>
    
                   <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
