--- a/index.html
+++ b/index.html
@@ -631,6 +631,119 @@
             </div>
          </div>
       </div>
+      <!--Actividad 13-->
+      <div class="actividad inactivo" id="actividad1">
+         <h2>Actividad 14</h2>
+         <div class="contenido">
+            <p>Esta actividad se realizara un contador con un display</p>
+            <div class="codigo">
+               <code>
+                  <span class="resaltador">const</span> <span class="variables">int</span> A <span class="signo"> =  <span class="number">13</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> B <span class="signo"> =  <span class="number">12</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> C <span class="signo"> =  <span class="number">11</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> D <span class="signo"> =  <span class="number">10</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> E <span class="signo"> =  <span class="number">9</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> F <span class="signo"> =  <span class="number">8</span>;</span> <br>
+                  <span class="resaltador">const</span> <span class="variables">int</span> G <span class="signo"> =  <span class="number">7</span>;</span> <br>
+                  <span class="resaltador">void</span> setup<span class="signo">()</span> <br>
+                  <span class="signo">{</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>A, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>B, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>C, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>D, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>E, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>F, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; pinMode<span class="signo">(</span>G, <span class="resaltador">OUTPUT</span><span class="signo">);</span> <br>
+                  <span class="signo">}</span> <br>
+   
+                  <span class="resaltador">void</span> loop<span class="signo">()</span> <br>
+                  <span class="signo">{</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>A, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>B, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>C, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>D, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>E, <span class="resaltador">HIGH</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>F, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; digitalWrite<span class="signo">(</span>G, <span class="resaltador">LOW</span><span class="signo">);</span> <br>
+                  &nbsp;&nbsp;&nbsp;&nbsp; delay<span class="signo">(<span class="number">500</span>)</span>; <br>
+                  
+                  <span class="signo">}</span> <br>
+               </code>
+            </div>
+         </div>
+      </div>
    </main>
    <footer>
       <img src="https://prints.ultracoloringpages.com/422af46047e9e2c260bae815571c7fdc.png" alt="icono" width="50vw">
